# Reconhecimento_facial_campus_monitorado

./: .gitignore  Dockerfile  Makefile  README.md  api.py  config.py  crud.py  database.py  docker-compose.yml  facial_recognition.py  main.py  pictures_capture.py  pyproject.toml  schema.py  training.py  video_analysis.py
infra/: Dockerfile  docker-compose.yml
src/api/: routes.py
src/entities/: __init__.py  models.py  schemas.py
src/infra/: __init__.py  config.py  database.py
src/repositories/: __init__.py  camera_repository.py  controller_repository.py  person_repository.py
src/services/: facial_recognition.py  pictures_capture.py  training.py  video_analysis.py
templates/: captura.html
tests/: test_api.py  test_config.py  test_training.py
