[project]
name = "reconhecimento-facial-campus-monitorado"
version = "0.1.0"
description = "Sistema de reconhecimento facial para monitoramento de campus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.75.2",
    "uvicorn==0.17.6",
    "PyMySQL==1.0.2",
    "SQLAlchemy==1.4.35",
    "cryptography==37.0.0",
    "opencv-contrib-python>=4.8.0",
    "ruff>=0.14.9",
    "numpy>=1.24.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
